everything is set up for the deployment process, some minor changes to the code for csrf protectin (add expanding via configmap later, but works for now, just don't forget to change when deploying)

--- a/forum_proj/.env
+++ b/forum_proj/.env
@@ -1,5 +1,5 @@
 DEBUG=False
-DJANGO_SECRET_KEY='some-insecure-key-fksfskjfsfsf' # secret
+DJANGO_SECRET_KEY='some-insecure-key-fksfskjfsfsf' # secret (have i added this one ?)
 
 # idk bout those 2 
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
@@ -10,6 +10,6 @@ DJANGO_TIME_ZONE = UTC # configmap
 DB_ENGINE=mysql # configmap
 DB_NAME=forum_db # secret
 DB_USER=forumdb_user # secret 
-DB_PASSWORD=1 # secret
+DB_PASSWORD=rootpass # secret
 DB_HOST=db # chage for rds ARN 
 DB_PORT=3306
